--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 
     <script src="/WG2/js/Wg2Uploder.js"></script>
     <!-- <script src="http://mins01.com/WG2/js/Wg2Uploder.js"></script> -->
+    <script>
+        if(Wg2Uploder){
+            globalThis.Wg2Uploder = Wg2Uploder;        
+        }
+    </script>
     <!-- //WG2 uploader -->
 
     <!-- color palette -->
