--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                         <h2 class="modal-title fs-4">Webapp WC3</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body border-bottom">
                         <h5>File</h5>
 
                         <div class="row g-1">
@@ -346,9 +346,16 @@
                                     <div>CLOSE</div>
                                 </button>
                             </div>
+                            <div class="col-6">
+                                <button type="button" class="w-100 btn btn-lg btn-warning" onclick="WcHelper.newForTest(editor)">
+                                    <div class="fs-4"><i class="bi bi-emoji-smile-upside-down"></i></div>
+                                    <div>For Test</div>
+                                </button>
+                            </div>
 
                         </div>
-                        <hr>
+                    </div>
+                    <div class="modal-body">
                         <div class="d-flex flex-column gap-3">
                             <form action="" onsubmit="return false" onchange="editor.setEditorConfig(Wc.HtmlUtil.formToObject(this))" data-wc-sync-form="editor.editorConfig">
                                 <h5>Input mode</h5>
@@ -793,6 +800,15 @@
                 </div>
             </div>
         </div>
+
+        <script>
+            window.addEventListener('load',(event)=>{
+                document.getElementById('modal-layers').addEventListener('show.bs.modal', event => {
+                    editor.readyLayer();
+                })
+                
+            },{once:true})
+        </script>
 
         <div class="modal fade" id="modal-layer-config"  aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
